syntax = "proto3";

package gov.cms.mpsm.rda.v1;

option java_multiple_files = true;

message ApiVersion {
  // Version of the API.
  string version = 1;

  // The ID of the last commit.
  string commitId = 2;

  // When the API package was built.
  string buildTime = 3;
}
